Updated look of main page.

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,19 @@
 <head>
   <meta charset="utf-8">
   <title>Subscription | StagedHomes.com</title>
-  <base href="/subscription/dist/subscribe/">
+  <base href="./">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Header Dependencies -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous" />
+  <link href="./assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <app-root>Loading...</app-root>
+
+  <!-- Footer Dependencies -->
+  <script type="text/javascript" href="./assets/js/bootstrap.min.js"></script>
 </body>
 </html>
