--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-  <!-- Header Dependencies -->
+  <!-- ====================================================================
+    Header Dependencies
+  ==================================================================== -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous" />
-  <link href="./assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+  <link href="./assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" /><!-- Bootstrap 4.1.1 -->
 </head>
 <body>
   <app-root>Loading...</app-root>
 
-  <!-- Footer Dependencies -->
+  <!-- ====================================================================
+    Footer Dependencies
+  ==================================================================== -->
   <script type="text/javascript" href="./assets/js/bootstrap.min.js"></script>
 </body>
 </html>
